Edited Media.java to remove deprecated errors